<resources>
    <string name="app_name">AppTualidad</string>
    <string name="sharedpreferences_filename">login</string>
    <string name="jwt_key">JWT_KEY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">!Bienvenidx de nuevo¡</string>
    <string name="editText_email_login">Email</string>
    <string name="editText_password_login">Password</string>
    <string name="textView_descrition_login">Al registrate o iniciar sesión, aceptas nuestros términos y condiciones y la política de Privacidad</string>
    <string name="Button_login">Iniciar Sesión</string>
    <string name="Button_loginToRegistro">¿No tienes cuenta?</string>
    <string name="textView_title_registro">Únete a AppTualidad</string>
    <string name="editText_name_registro">Nombre y Apellidos</string>
    <string name="editText_email_registro">Email</string>
    <string name="editText_password_registro">Password</string>
    <string name="Button_registro">Entrar</string>
    <string name="Button_registroToLogin">¿Tienes cuenta?</string>
    <string name="buscar">  Buscar noticia...</string>
    <string name="button_nuevo">Nuevo</string>
    <string name="button_destacado">Destacado</string>
    <string name="button_cerca">Cerca</string>
    <string name="dialog_message">Elige la distancia</string>
    <string name="dialog_title">Filtra por distancia de ti</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="button_mispublicaciones">Mis publicaciones</string>
    <string name="button_perfil">Perfil</string>
    <string name="button_change_photo">Cambiar foto</string>
    <string name="editText_change_perfil">Email...</string>
    <string name="editText_change_name">Nombre...</string>
    <string name="change_pass">Cambiar contraseña</string>
    <string name="editText_pass_actual">Contraseña actual</string>
    <string name="editText_pass_nueva">Nueva contraseña</string>
    <string name="editText_pass_rep">Repite contraseña</string>
    <string name="editText_comentario">Añade un comentario...</string>
    <string name="dialog_message2">¿Estás Seguro?</string>
    <string name="dialog_title2">¿Quieres cerrar sesión?</string>
    <string name="textView_title_addnotice">Añade una noticia</string>
    <string name="editText_title_create">Título de la noticia...</string>
    <string name="editText_description_addnotice">¿Que ha pasado?</string>
    <string name="editText_direccion_addnotice">Dirección. Ej: Gran vía, 32</string>
    <string name="button_next_addnotice">Siguiente</string>
    <string name="delete_photo">Eliminar</string>
    <string name="dialog_title3">¿Quieres borrar esta foto?</string>
    <string name="dialog_title4">¿Quieres borrar este comentario?</string>
    <string name="dialog_title5">¿Quieres borrar esta noticia?</string>
    <string name="textView_aceptar">Aceptar</string>
    <string name="title_activity_maps">Map</string>
</resources>
